Fix bottom spacing issue in all screens

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -11,7 +11,7 @@
 
 .profile-header {
   margin-bottom: 20px;
-  margin-top: 15vh;
+  margin-top: 12vh;
 }
 
 .profile-header h2,
